fix for the gap between exhibition and items in the mobile.

--- a/docroot/themes/eminent_sardar/eminent_sardar.css
+++ b/docroot/themes/eminent_sardar/eminent_sardar.css
@@ -195,7 +195,9 @@ video,
 }
 .deails_holder {
   max-height: 300px;
+  overflow: scroll;
 }
+
 #header .navbar-right .search input.search-form {
   width: 200px;
 }
